--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,10 @@ jobs:
       - name: Install Futhark (linux)
         if: ${{ env.OS == 'linux' }}
         run: |
-          sudo apt-get install -y futhark
-          futhark --version
+          wget http://futhark-lang.org/releases/futhark-nightly-linux-x86_64.tar.xz
+          tar xf futhark-nightly-linux-x86_64.tar.xz
+          (cd futhark-nightly-linux-x86_64/ && PREFIX=$HOME/.local make install)
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install Futhark (macos)
         if: ${{ env.OS == 'darwin' }}
