--- a/fut/Makefile
+++ b/fut/Makefile
@@ -4,12 +4,13 @@ lib:
 
 .PHONY: test
 test: lib
-	futhark test dqfut_test.fut ex1.fut grover.fut ghz.fut
+	futhark test dqfut_test.fut ex1.fut grover.fut ghz.fut qft.fut
 	$(MAKE) -C qsim test
 
 .PHONY: clean
 clean:
-	rm -rf *.expected *.actual *~ *.c ex1 dqfut_test grover ghz *.multicore.data
+	rm -rf *.expected *.actual *~ *.c ex1 dqfut_test grover ghz qft *.multicore.data
+	$(MAKE) -C qsim clean
 
 .PHONY: realclean
 realclean: clean
